# louis-quentin-lecoq.com

./: .eslintrc.json  .gitignore  Cargo.toml  Makefile  README.md  TODO  index.html  package-lock.json  package.json  vercel.json
benchmarks/: BENCHMARK.md  environment_info.txt
benchmarks/charts/: index.html
benchmarks/charts/css/: style.css
benchmarks/charts/js/: ChartCpuMetricsAverage.js  ChartDonutLanguages.js  ChartFpsParticles.js  ChartRadar.js  ChartRamMetricsAverage.js  ChartSpeedometerCpu.js  ChartsSortAlgo.js  index.js
benchmarks/data/: particles_instanciation.txt
benchmarks/scripts/: CpuMetricsProfiler.js  RamMetricsProfiler.js  TraceDataProfiler.js  benchmark.js  environment_info.sh  runAllBenchmarks.sh  test.js
config.bundlers/: webpack.charts.config.js  webpack.config.js  webpack.dev.js  webpack.prod.js  webpack.test.js
config.linters/: .eslintignore  .eslintrc.json
css/: style.css
css/base/: typography.css
css/components/: button.css  buttons.css  rangeSlider.css
css/layout/: footer.css  header.css
css/sections/: home.css  sections.css
css/themes/: dark.css  light.css
js/: MyApp.js  app.js  particles.js  particles.js.bak  particles.js.bak.js  script.js
js/components/: header.js
js/components/particles/: AnimationController.js  AnimationRenderer.js  Particles.js  (+3 more)
js/sections/: home.js
src/: index.html  lib.rs
src/components/: about.rs
src/css/: style.css
src/js/: MyApp.js  app.js
src/particles/: connection.rs  connections_manager.rs  impulse.rs  impulses_manager.rs  mod.rs  mouse_tracker.rs  particle.rs  particles.rs  particles_manager.rs  sort_neighbors_from_worker.rs
src/rs/: Cargo.toml
(+92 files in other folders)
