[package]
name = "louis-quentin-lecoq"
version = "0.1.0"
authors = ["Louis-Quentin Lecoq <lecoqlq@gmail.com>"]
description = "Personal SPA projet built with wasm-pack"
repository = "https://gitlab.com/llecoq/louis-quentin-lecoq.com"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-console = "0.3.0"
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }