[package]
name = "louis-quentin-lecoq"
version = "0.1.0"
authors = ["Louis-Quentin Lecoq <lecoqlq@gmail.com>"]
description = "Personal SPA projet built with wasm-pack"
repository = "https://gitlab.com/llecoq/louis-quentin-lecoq.com"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.20"
console_error_panic_hook = "0.1.7"
